# aus-nem-price-analyzer

./: .gitignore  INSTURCTIONS.md  LICENSE  README.md  config.example.yml  pyproject.toml  requirements.txt
docs/: BEGINNER_GUIDE.md  architecture.md  examples.md
scripts/: bootstrap_venv.sh  run_examples.sh
src/aus_nem_price_analyzer/: __init__.py  analysis.py  battery_strategy.py  cli.py  config.py  data_loader.py  plots.py
tests/: test_analysis.py  test_battery_strategy.py  test_data_loader.py
